--- a/MaterialChap/MainWindow.xaml
+++ b/MaterialChap/MainWindow.xaml
@@ -1,13 +1,17 @@
 ﻿<Window x:Class="MaterialChap.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:cefSharp="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
+             xmlns:wpf="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
+             xmlns:system="clr-namespace:System;assembly=mscorlib"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MaterialChap"
+        xmlns:local="clr-namespace:MaterialChap"        
+        x:Name="mainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
+        <local:ValuePercentageConverter x:Key="converter"/>
         <Style
             x:Key="ScrollBarTrackThumb"
             TargetType="{x:Type Thumb}">
@@ -235,7 +239,69 @@
             </Setter>
         </Style>
     </Window.Resources>
-    <materialDesign:DialogHost Identifier="RootDialog" >
+    <materialDesign:DialogHost Identifier="RootDialog"  IsOpen="True">
+        <materialDesign:DialogHost.DialogContent>
+            <Grid 
+          Height="{Binding ElementName=mainWindow, Path=Height, Mode=TwoWay, Converter={StaticResource converter}, ConverterParameter=0.7}"
+          Width="{Binding ElementName=mainWindow, Path=Width, Mode=TwoWay, Converter={StaticResource converter}, ConverterParameter=0.7}"                    
+          HorizontalAlignment="Stretch"
+          VerticalAlignment="Stretch"
+          >
+
+                <materialDesign:Card
+            Margin="20"
+            Padding="20"
+                                VerticalAlignment="Stretch"
+                                HorizontalAlignment="Stretch"
+                                Background="{DynamicResource MaterialDesignBackground}"
+                              >
+
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <DockPanel Grid.Row="0">
+                            <TextBlock DockPanel.Dock="Left"
+                                                x:Name="DisplayContextTitle2"
+                                                Style="{StaticResource MaterialDesignHeadline5TextBlock}"
+                                                TextWrapping="Wrap" >
+                                                Html
+                            </TextBlock>
+                            <Button IsDefault="True" Style="{DynamicResource MaterialDesignFlatButton}"
+                        DockPanel.Dock="Right"
+                        HorizontalAlignment="Right"
+                    Command="{x:Static wpf:DialogHost.CloseDialogCommand}">
+                                <Button.CommandParameter>
+                                    <system:Boolean>True</system:Boolean>
+                                </Button.CommandParameter>
+                                CLOSEs
+                            </Button>
+                        </DockPanel>
+                        <cefSharp:ChromiumWebBrowser
+                            Grid.Row="1"
+                      VerticalAlignment="Stretch"
+                            HorizontalAlignment="Stretch"
+                x:Name="browser"
+                    Address="http://localhost:8887/tableTesxt.html"
+                    />
+
+                    </Grid>
+                </materialDesign:Card>
+
+                <!--<StackPanel Orientation="Horizontal" Grid.Row="1"
+                    Margin="0 16 0 0">
+
+            <Button IsCancel="True" Margin="8 0 0 0" Style="{DynamicResource MaterialDesignFlatButton}"
+                    Command="{x:Static wpf:DialogHost.CloseDialogCommand}">
+                <Button.CommandParameter>
+                    <system:Boolean>False</system:Boolean>
+                </Button.CommandParameter>
+                CANCEL
+            </Button>
+        </StackPanel>-->
+            </Grid>
+        </materialDesign:DialogHost.DialogContent>
         <Grid
         Background="#f8f9fc">
             <Grid.RowDefinitions>
