--- a/MaterialChap/SampleDialog.xaml
+++ b/MaterialChap/SampleDialog.xaml
@@ -16,8 +16,8 @@
         <local:ValuePercentageConverter x:Key="converter"/>
     </UserControl.Resources>
     <Grid 
-          Height="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:MainWindow}} , Path=Height, Mode=TwoWay, Converter={StaticResource converter}, ConverterParameter=0.7}"
-          Width="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:MainWindow}} , Path=Width, Mode=TwoWay, Converter={StaticResource converter}, ConverterParameter=0.7}"
+          Height="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:MainWindow}} , Path=Height, Mode=TwoWay, Converter={StaticResource converter}, ConverterParameter=0.8}"
+          Width="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:MainWindow}} , Path=Width, Mode=TwoWay, Converter={StaticResource converter}, ConverterParameter=0.8}"
           HorizontalAlignment="Stretch"
           VerticalAlignment="Stretch"
           >
@@ -49,7 +49,7 @@
                         <Button.CommandParameter>
                             <system:Boolean>True</system:Boolean>
                         </Button.CommandParameter>
-                        CLOSEs
+                        CLOSE
                     </Button>
                 </DockPanel>
                 <cefSharp:ChromiumWebBrowser
